# tauri-plugin-thumbnail

./: Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts  proguard-rules.pro
android/src/main/java/com/tauri/thumbnail/: ThumbnailPlugin.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: ThumbnailPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
